# agenticos

./: .env.example  .gitignore  .vercelignore  422-ERROR-FIX.md  DEBUG-GHERKIN.md  DEPLOY.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  GHERKIN-GUIDE.md  LOGGING.md  PYTHON-MIGRATION-GUIDE.md  QUICK-LOGGING-REFERENCE.md  README.md  TEST-REQUIREMENT.sh  VERCEL-DEPLOYMENT-CHECKLIST.md  VERCEL-DEPLOYMENT-GUIDE.md  VERCEL-READY.md  VERCEL-SETUP.md  check-deployment.sh  claude-spec.md  docker-compose.yml  requirements.txt  vercel.json
api/: __init__.py  main.py
backend/: .env.example  .env.production.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 001_create_core_tables.sql  002_fix_timestamps.sql
backend/src/: main.rs
backend/src/dto/: auth_dto.rs  data_bag_dto.rs  domain_dto.rs  mod.rs  project_dto.rs  requirement_dto.rs  specification_dto.rs  test_case_dto.rs
backend/src/errors/: mod.rs
backend/src/handlers/: auth.rs  data_bags.rs  domains.rs  health.rs  mod.rs  projects.rs  requirements.rs  specifications.rs  test_cases.rs
backend/src/middleware/: auth.rs
backend/src/models/: data_bag.rs  domain.rs  mod.rs  project.rs  requirement.rs  specification.rs  test_case.rs  user.rs
backend/src/repositories/: data_bag_repo.rs  domain_repo.rs  mod.rs  project_repo.rs  requirement_repo.rs  specification_repo.rs  test_case_repo.rs  user_repo.rs
backend/src/routes/: mod.rs
backend/src/services/: claude_service.rs  mod.rs
backend/src/utils/: gherkin_parser.rs  jwt.rs  mod.rs  password.rs
frontend/: .env.example  .env.local.example  .vercelignore  (+6 more)
(+73 files in other folders)
